# Question-checker

./: Cargo.toml  FORMAT.md  README.md  SIDENOTE.md  convention_JSON.md
assets/materials/ALG-003/1/1/: content.md  exercise1.json
assets/materials/ALG-003/2/1/: exercise1.json
assets/materials/ALG-003/2/2/: exercise1.json
assets/questions/: answer.json  problem.json
assets/schema/: sample.yml  sample2.yml
dummy/: sample.json
init_server/: Cargo.toml
init_server/src/: main.rs
init_server/src/server/: mod.rs
init_server/src/server/format/: mod.rs  question_type.rs  response_type.rs
init_server/src/server/routes/receiver/: README.md  handler.rs  mod.rs  response_type.rs
init_server/src/server/routes/sender/: mod.rs
init_server_graphql/: Cargo.toml  README.md
init_server_graphql/src/: main.rs
init_server_graphql/src/server/: mod.rs
init_server_graphql/src/server/routes/: mod.rs
init_server_graphql/src/server/routes/graphql/: manual.md  mod.rs  question_types.rs  response_types.rs  schema.rs  types.rs
init_server_graphql/src/server/routes/graphql/mutation/: check_answer.rs  mod.rs
init_server_graphql/src/server/routes/graphql/query/: fetch_content.rs  fetch_question.rs  mod.rs
init_server_graphql/src/server/routes/serve_files/: mod.rs
init_server_rpc/: Cargo.toml  README.md
init_server_rpc/src/server/: mod.rs
init_server_rpc/src/server/format/: mod.rs  question_type.rs  response_type.rs  types.rs
init_server_rpc/src/server/routes/: mod.rs
python/: README.md  gen-answer.py  gen_dir.py  log.txt
(+4 files in other folders)
