[package]
name = "init_server_graphql"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
time = "0.3.36"
chrono = "0.4.38"
serde_json = "1.0.117"
serde = { version = "1.0", features = ["derive"] }
axum = "0.7.5"
tower-http = { version = "0.5.2", features = ["full"] }
axum-server = "0.6.0"
pulldown-cmark = "0.10.3"
markdown-parser = "0.1.2"
tokio-util = "0.7.11"
mime_guess = "2.0.4"
serde_yaml = "0.9"
project-root = "0.2.2"
async-graphql = "7.0.5"
async-graphql-axum = "7.0.5"